--- a/app/src/main/res/layout/activity_partidas_menu.xml
+++ b/app/src/main/res/layout/activity_partidas_menu.xml
@@ -50,6 +50,20 @@ android:clipToPadding="false"
 android:paddingBottom="16dp"
 android:paddingTop="8dp" />
 
+    <!-- Botón Zona de Preguntas -->
+    <Button
+        android:id="@+id/btnZonaPreguntas"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#99FFFFFF"
+        android:text="Zona de Preguntas"
+        app:layout_constraintTop_toBottomOf="@id/btnCrearPartida"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"/>
+
+
     <!-- Cargando (ProgressBar) -->
 <ProgressBar
 android:id="@+id/progressBar"
